# discord-vc-thread

./: Cargo.toml  README.md
bot/: config.default.toml
src/: app_config.rs  event_handler.rs  main.rs
