[package]
name = "discord-vc-thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
config = "0.13.1"
log = "0.4.17"
log4rs = "1.1.1"
serde = "1.0.137"
serde_json = "1.0.81"
serenity = "0.11.2"
tokio = {version = "1.18.2", features = ["rt-multi-thread"]}
